[gd_scene load_steps=4 format=3 uid="uid://cf1iprn526ntd"]

[ext_resource type="Script" uid="uid://cjeqwmytev133" path="res://Scripts/menu_control.gd" id="1_h87vg"]
[ext_resource type="AudioStream" uid="uid://bqj4islaoojb8" path="res://Sounds/UI/Mouse Click.ogg" id="2_lm48m"]
[ext_resource type="AudioStream" uid="uid://7hg88igy815y" path="res://Sounds/UI/MouseHover.ogg" id="3_tdxk4"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
script = ExtResource("1_h87vg")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 256

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0.4, 0.223529, 0.192157, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 45

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.145098, 0.145098, 0.145098, 0.780392)

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 61
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 12
columns = 2

[node name="Credits2" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Music Composition and Implementation"
fit_content = true
horizontal_alignment = 1

[node name="Credits3" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits4" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Sound Design"
fit_content = true
horizontal_alignment = 1

[node name="Credits5" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits6" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Animation "
fit_content = true
horizontal_alignment = 1

[node name="Credits7" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits8" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Lead Horse Designer"
fit_content = true
horizontal_alignment = 1

[node name="Credits9" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits10" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Emotional Support and generally being a stand-up guy"
fit_content = true
horizontal_alignment = 1

[node name="Credits11" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits12" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Level Design
"
fit_content = true
horizontal_alignment = 1

[node name="Credits13" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Brinley Morgan"
fit_content = true
horizontal_alignment = 1

[node name="Credits14" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Coding"
fit_content = true
horizontal_alignment = 1

[node name="Credits15" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Brinley Morgan and Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits16" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Game Design"
fit_content = true
horizontal_alignment = 1

[node name="Credits17" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Brinley Morgan"
fit_content = true
horizontal_alignment = 1

[node name="Credits18" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "Environment Art"
fit_content = true
horizontal_alignment = 1

[node name="Credits19" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Brinley Morgan"
fit_content = true
horizontal_alignment = 1

[node name="Credits20" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 1.65
text = "UX/UI"
fit_content = true
horizontal_alignment = 1

[node name="Credits21" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.79
text = "Brinley Morgan & Ben Murphy"
fit_content = true
horizontal_alignment = 1

[node name="Credits22" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "See more of Ben's fantastic work on his soundcloud:"
fit_content = true
horizontal_alignment = 1

[node name="LinkButton" type="LinkButton" parent="MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(5.77569e-07, 0.741123, 0.950457, 1)
theme_override_colors/font_hover_color = Color(1, 0.48934, 0.114114, 1)
text = "https://soundcloud.com/messedup-murphy"

[node name="back_button" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Back"
icon_alignment = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lm48m")
volume_db = -6.5

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tdxk4")
volume_db = -6.5

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/back_button" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/back_button" to="." method="_on_back_button_pressed"]
