[gd_scene load_steps=5 format=3 uid="uid://fdspmfck7718"]

[ext_resource type="Script" uid="uid://cjeqwmytev133" path="res://Scripts/menu_control.gd" id="1_5wsvm"]
[ext_resource type="AudioStream" uid="uid://c1leemy3urd4" path="res://Music/Mane theme.ogg" id="2_i2xx2"]
[ext_resource type="AudioStream" uid="uid://bqj4islaoojb8" path="res://Sounds/UI/Mouse Click.ogg" id="2_o14dv"]
[ext_resource type="AudioStream" uid="uid://7hg88igy815y" path="res://Sounds/UI/MouseHover.ogg" id="4_u7lva"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5wsvm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 640
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 128

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.121569, 0.121569, 0.121569, 0.780392)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 15
columns = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_horizontal = 3
text = "Horse Looper 2:
The Equine Space Program"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="game_start" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"
autowrap_mode = 3
icon_alignment = 1

[node name="options" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"
autowrap_mode = 3
icon_alignment = 1

[node name="credits" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"
autowrap_mode = 3
icon_alignment = 1

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"
autowrap_mode = 3
icon_alignment = 1

[node name="Background" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o14dv")
volume_db = -6.5

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u7lva")
volume_db = -6.5

[node name="Mane_Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_i2xx2")
autoplay = true
bus = &"Music"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/game_start" to="." method="_on_game_start_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/game_start" to="." method="_on_game_start_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
